# axum-rest-starter-example

./: .gitignore  Cargo.toml  LICENSE  README.md  docker-compose.yml
.github/workflows/: rust.yml
app/: Cargo.toml
app-core/: Cargo.toml
app-core/src/: error.rs  lib.rs
app/src/: configure.rs  handlers.rs  main.rs  session.rs  utils.rs
app/src/api/: mod.rs
app/src/auth/: jwt.rs
app/src/extractors/: user_extractor.rs
app/src/middleware/: debugging.rs  mod.rs
app/src/wrappers/: redis_wrapper.rs
axum-rest-middleware/: Cargo.toml
axum-rest-middleware/src/: error.rs  extractors.rs  lib.rs  middleware.rs
src/: configure.rs  errors.rs  handlers.rs  main.rs  session.rs  utils.rs
src/extractors/: mod.rs  user_extractor.rs
src/middleware/: debugging.rs
src/wrappers/: mod.rs  redis_store.rs  redis_wrapper.rs
templates/: index.html
