[package]
name = "register_otp"
version = "0.1.0"
edition = "2021"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
tokio = { version = "1", features = ["full"] }
axum = "0.4"
redis = { version = "0.21", features = ["aio", "tokio-comp"] }
tracing = "0.1"
tracing-subscriber = { version="0.3", features = ["env-filter"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
once_cell = "1.9.0"
config = "0.11.0"
glob = "0.3.0"
tower = { version = "0.4.11", features = ["limit"] }
tower-http = { version = "0.2.0", features = ["trace"] }

[dependencies.uuid]
version = "1.0.0-alpha.1"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
