[package]
name = "app-core"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0"
axum = { version = "0.4", features = ["headers"] }
hyper = { version = "0.14", features = ["full"] }
async-session = "3.0.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
